--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 .project-img{
     border-radius: 10%;
     transition: transform 0.3s ease; /* Smooth transition */
-    max-width: 14vw;
+    width: 14vw;
 }
 
 .project-img:hover{
